[metadata]
name = py-wkhtmltox
version = 0.3
author = Matt Reiferson
author_email = mreiferson@gmail.com
description = Python bindings for libwkhtmltox
url = http://github.com/mreiferson/py-wkhtmltox
license_file = LICENSE

[options]
include_package_data = True
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires =
    Cython==0.29.24

[options.packages.find]
exclude =
    tests*

[tox:tox]
envlist = py34,py27

[testenv]
commands = pytest -q tests
deps =
    pytest==4.6.11
    Pillow==5.4.1
    PyPDF2==1.25.1

[testenv:py27]
install_command = pip install -q --no-index --find-links=file:///app/pip-cache {opts} {packages}
